<?xml version="1.0"?>
<package format="3">
  <name>slam_kalman</name>
  <version>0.1.0</version>
  <description>SLAM implementation using Kalman Filter</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- Build dependencies -->
  <build_depend>eigen3_cmake_module</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>